# Voice-Cloner

./: .gitignore  Makefile  README.md  check_gpu.py  check_keys.py  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
scripts/: create_env.ps1
src/voice_conv/: audio_io.py  cli.py  config.py  content_encoder.py  embedding.py  pipeline.py  preprocess.py  pyproject.toml  vc_model.py
src/voice_conv/utils/: logging_utils.py
tests/: test_audio_io.py  test_config_yaml.py  test_imports.py  test_models_file.py  test_preprocess.py  test_smoke_model.py
